--- a/pages/subpages/live/components/anchor-capsule/index.wxss
+++ b/pages/subpages/live/components/anchor-capsule/index.wxss
@@ -1,20 +1,22 @@
 .anchor-capsule {
   margin-left: 8px;
-  padding-left: 2px;
-  padding-right: 12px;
+  padding: 0 2px;
   max-width: 150px;
   height: 32px;
   border-radius: 16px;
   background-color: rgba(0, 0, 0, 0.3);
   border: 0.5px solid rgba(255,255,255,0.3);
 }
+
 .anchor-avatar {
   width: 27px;
   height: 27px;
   border-radius: 50%;
 }
+
 .anchor-capsule-content {
   margin-left: 5px;
+  margin-right: 10px;
   flex: 1;
   color: #fff;
 }
@@ -25,4 +27,14 @@
 .audience-count {
   margin-top: 1px;
   font-size: 8px;
+}
+
+.follow-btn {
+  width: 27px;
+  height: 27px;
+  color: #fff;
+  font-size: 10px;
+  line-height: 1;
+  border-radius: 50%;
+  background: #EE3769;
 }
