--- a/pages/subpages/live/live-play/components/play-room/index.wxml
+++ b/pages/subpages/live/live-play/components/play-room/index.wxml
@@ -2,7 +2,7 @@
 
 <view class="room {{!srcIniting ? 'show' : ''}}" ontap="dbTap">
   <live-player wx:if="{{!liveEnd}}" horizontal="{{roomInfo.direction === 2}}" src="{{roomInfo.playUrl}}" bind:statechange="statechange">
-    <swiper class="inner-wrap" slot="{{fullScreen ? 'inside' : 'outside'}}">
+    <swiper class="inner-wrap" wx:if="{{userInfo}}" slot="{{fullScreen ? 'inside' : 'outside'}}">
       <swiper-item class="inner">
         <view class="top-part" style="padding: {{fullScreen ? 8 : statusBarHeight}}px {{fullScreen ? 30 : 8}}px 0; ">
           <view class="anchor-capsule-wrap {{fullScreen ? 'full-screen' : ''}}">
@@ -39,6 +39,7 @@
       </swiper-item>
       <swiper-item></swiper-item>
     </swiper>
+    <button class="login-btn" wx:else catchtap="login" slot="outside">登录参与直播互动</button>
   </live-player>
 
   <!-- 双击爱心 -->
