--- a/pages/subpages/live/live-play/components/play-room/index.wxss
+++ b/pages/subpages/live/live-play/components/play-room/index.wxss
@@ -206,3 +206,18 @@
   height: 80px;
   opacity: 0;
 }
+
+.login-btn {
+  position: fixed;
+  left: 50%;
+  bottom: 20%;
+  transform: translateX(-50%);
+  padding: 0 20px;
+  height: 34px;
+  color: #fff;
+  font-size: 13px;
+  line-height: 1;
+  border-radius: 20px;
+  background-color: rgba(0, 0, 0, 0.3);
+  border: 1px solid rgba(255,255,255,0.3);
+}
