--- a/pages/tab-bar-pages/home/components/live-item/index.wxss
+++ b/pages/tab-bar-pages/home/components/live-item/index.wxss
@@ -1,4 +1,4 @@
-.live-item {
+/* .live-item {
   margin-bottom: 30rpx;
   width: 350rpx;
 }
@@ -93,4 +93,141 @@
   margin-right: 4rpx;
   width: 26rpx;
   height: 24rpx;
+} */
+
+.live-symbol {
+  position: absolute;
+  top: 10rpx;
+  right: 10rpx;
+  display: flex;
+  align-items: center;
+  padding: 0 12rpx;
+  height: 36rpx;
+  color: #fff;
+  font-size: 20rpx;
+  font-weight: 500;
+  border-radius: 12rpx;
+  background: linear-gradient(90deg, #f783af 0%, #f53b6a 100%);
+}
+.live-icon {
+  margin-right: 6rpx;
+  width: 20rpx;
+  height: 20rpx;
+}
+
+.live-item {
+  position: relative;
+  margin-bottom: 18rpx;
+  width: 350rpx;
+  height: 525rpx;
+  font-size: 0;
+  border-radius: 18rpx;
+  overflow: hidden;
+}
+
+.bg,
+.active-bg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 12rpx;
+  z-index: 0;
+}
+.active-bg {
+  opacity: 0;
+}
+.active-bg.show {
+  opacity: 1;
+}
+
+.status-wrap {
+  position: absolute;
+  top: 16rpx;
+  left: 16rpx;
+  display: flex;
+  align-items: center;
+  color: #fff;
+  font-size: 20rpx;
+  line-height: 1;
+  border-radius: 17rpx;
+  background: rgba(0, 0, 0, 0.3);
+}
+.status {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 34rpx;
+  border-radius: 18rpx;
+}
+.status.live {
+  width: 34rpx;
+  background: linear-gradient(121deg, #FF7F6B 0%, #E63D1C 100%);
+}
+.status.notice {
+  width: 60rpx;
+  background: linear-gradient(90deg, #1895F5 0%, #097FE6 100%);
+}
+.audience-num {
+  padding: 0 10rpx;
+}
+
+.info-wrap {
+  position: absolute;
+  bottom: 0;
+  padding: 16rpx;
+  width: 100%;
+  border-radius: 0 0 12rpx 12rpx;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+}
+.title {
+  color: #fff;
+  font-size: 26rpx;
+  font-weight: bold;
+}
+.info {
+  display: flex;
+  align-items: center;
+  margin-top: 18rpx;
+}
+.anchor-avatar {
+  margin-right: 8rpx;
+  width: 36rpx;
+  height: 36rpx;
+  border-radius: 50%;
+  background-image: url('https://img.ubo.vip/mp/default-ubo-icon.png');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.anchor-name {
+  flex: 1;
+  color: #fff;
+  font-size: 22rpx;
+  font-weight: 600;
+}
+
+.praise-info {
+  display: flex;
+  align-items: center;
+  color: #fff;
+  font-size: 22rpx;
+}
+.praise-icon {
+  margin-right: 4rpx;
+  width: 26rpx;
+  height: 24rpx;
+}
+
+.notice-btn {
+  margin-left: 6rpx;
+  padding: 0 15rpx;
+  height: 40rpx;
+  color: #666;
+  font-size: 20rpx;
+  line-height: 1;
+  border-radius: 8rpx;
+  background: #E6E6E6;
+}
+.notice-btn.active {
+  color: #0F131A;
+  background: linear-gradient(270deg, #FFD699 0%, #FFE5BD 100%);
 }
