--- a/pages/tab-bar-pages/home/components/note-item/index.wxss
+++ b/pages/tab-bar-pages/home/components/note-item/index.wxss
@@ -1,4 +1,4 @@
-.note-item {
+.strategy-item {
   margin-bottom: 30rpx;
   width: 350rpx;
 }
@@ -11,30 +11,33 @@
 .cover {
   width: 350rpx;
 }
-
-.title-wrap {
+.address-info {
   position: absolute;
-  left: 10rpx;
-  bottom: 10rpx;
-  right: 10rpx;
-  font-weight: bold;
+  left: 0;
+  bottom: 0;
+  padding: 16rpx;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
 }
-.address {
-  padding: 6rpx 10rpx;
-  width: fit-content;
+.address-icon {
+  margin-right: 2rpx;
+  width: 30rpx;
+  height: 30rpx;
+}
+.address-detail {
+  flex: 1;
   color: #fff;
   font-size: 20rpx;
-  border-radius: 10rpx 10rpx 0 0;
-  background: var(--theme-color-btn-bg);
+  font-weight: 500;
 }
 .title {
-  padding: 10rpx;
-  background: #ebeae8;
-  border-radius: 0 10rpx 10rpx 10rpx;
-}
-.title-content {
+  margin-top: 12rpx;
+  padding: 0 10rpx;
   color: #333;
   font-size: 26rpx;
+  font-weight: bold;
 }
 
 .info-wrap {
@@ -54,18 +57,18 @@
 }
 .avatar {
   margin-right: 8rpx;
-  width: 30rpx;
-  height: 30rpx;
+  width: 36rpx;
+  height: 36rpx;
   border-radius: 50%;
 }
 .name {
   flex: 1;
 }
-.read-info {
+.praise-info {
   display: flex;
   align-items: center;
 }
-.read-icon {
+.praise-icon {
   margin-right: 6rpx;
   width: 26rpx;
   height: 26rpx;
