--- a/pages/tab-bar-pages/home/index.wxss
+++ b/pages/tab-bar-pages/home/index.wxss
@@ -19,7 +19,7 @@
   justify-content: center;
   height: 44px;
 }
-.notice-icon {
+.notice-center-icon {
   position: absolute;
   top: 50%;
   left: 8px;
