--- a/pages/tab-bar-pages/home/components/live-item/index.wxml
+++ b/pages/tab-bar-pages/home/components/live-item/index.wxml
@@ -17,7 +17,7 @@
   <view class="info-wrap">
     <view class="title omit">{{item.title}}</view>
     <view class="info row">
-      <image class="anchor-avatar" src="{{item.anchorInfo.avatar}}" lazy-load mode="aspectFill" />
+      <image class="anchor-avatar avatar-default" src="{{item.anchorInfo.avatar}}" lazy-load mode="aspectFill" />
       <view class="anchor-name omit single-line">{{item.anchorInfo.nickename}}</view>
       <view class="praise-info row" wx:if="{{item.status === 1}}">
         <image class="praise-icon" src="./images/fire.png" />
