--- a/pages/tab-bar-pages/home/components/video-item/index.wxml
+++ b/pages/tab-bar-pages/home/components/video-item/index.wxml
@@ -5,7 +5,7 @@
       <image class="video-icon" src="./images/play.png" />
     </view>
     <view class="address-info">
-      <image class="address-icon" src="./images/address.png" />
+      <image class="address-icon" src="../../images/address.png" />
       <text class="address-detail omit single-line">千岛湖绿城度假酒店千岛湖绿城度假酒店</text>
     </view>
   </view>
@@ -16,7 +16,7 @@
       <text class="name omit single-line">花束情人花束情人花束情人花束情人花束情人花束情人花束情人花束情人花束情人花束情人</text>
     </view>
     <view class="praise-info">
-      <image class="praise-icon" src="./images/heart.png" />
+      <image class="praise-icon" src="../../images/heart.png" />
       <text>10w</text>
     </view>
   </view>
