--- a/pages/tab-bar-pages/home/index.wxml
+++ b/pages/tab-bar-pages/home/index.wxml
@@ -14,7 +14,7 @@
 </view>
 
 <view class="container">
-  <swiper style="height: {{contentWrapHeightArr[curMenuIndex]}}px;" current="{{curMenuIndex}}" bindchange="swiperChange">
+  <swiper style="height: {{wrapHeightList[curMenuIndex]}}px;" current="{{curMenuIndex}}" bindchange="swiperChange">
     <swiper-item>
       <view class="content-wrap" style="padding-top: {{statusBarHeight + 102}}px;">关注</view>
     </swiper-item>
