--- a/pages/tab-bar-pages/home/index.wxml
+++ b/pages/tab-bar-pages/home/index.wxml
@@ -16,7 +16,9 @@
 <view class="container">
   <swiper style="height: {{wrapHeightList[curMenuIndex]}}px;" current="{{curMenuIndex}}" bindchange="swiperChange">
     <swiper-item>
-      <view class="content-wrap" style="padding-top: {{statusBarHeight + 102}}px;">关注</view>
+      <view class="content-wrap" style="padding-top: {{statusBarHeight + 102}}px;">
+        <fall-flow class="fall-flow-0" list="{{followMediaList}}" generic:item="media-item" bind:finish="setWrapHeight" />
+      </view>
     </swiper-item>
     <swiper-item>
       <view class="content-wrap" style="padding-top: {{statusBarHeight + 102}}px;">
