--- a/pages/subpages/mall/goods/subpages/goods-detail/index.wxml
+++ b/pages/subpages/mall/goods/subpages/goods-detail/index.wxml
@@ -125,4 +125,4 @@
   bind:hide="hideSpecPopup"
 />
 <!-- 分享 -->
-<share-popup show="{{shareModalVisible}}" bind:showPosterModal="showPosterModal" />
+<share-popup wx:if="{{shareModalVisible}}" />
