--- a/components/empty-illus/index.wxss
+++ b/components/empty-illus/index.wxss
@@ -12,3 +12,13 @@
   width: 240rpx;
   height: 240rpx;
 }
+.register-btn {
+  margin-top: 24rpx;
+  width: 180rpx;
+  height: 60rpx;
+  color: #fff;
+  font-size: 26rpx;
+  line-height: 1;
+  background: linear-gradient(128deg, #53678d 0%, #161F4E 100%);
+  border-radius: 12rpx;
+}
