--- a/pages/tab-bar-pages/home/index.wxml
+++ b/pages/tab-bar-pages/home/index.wxml
@@ -18,11 +18,15 @@
     <swiper-item>
       <view class="content-wrap" style="padding-top: {{statusBarHeight + 102}}px;">
         <fall-flow class="fall-flow-0" list="{{followMediaList}}" generic:item="media-item" bind:finish="setWrapHeight" />
+        <empty-illus wx:if="{{!userInfo || (followFinished && !followMediaList.length)}}" registerBtnVisible="{{!userInfo}}" desc="暂无关注列表" />
+        <view class="no-more-tips" wx:if="{{followFinished && followMediaList.length}}">～没有更多了～</view>
       </view>
     </swiper-item>
     <swiper-item>
       <view class="content-wrap" style="padding-top: {{statusBarHeight + 102}}px;">
         <fall-flow class="fall-flow-1" list="{{mediaList}}" generic:item="media-item" bind:finish="setWrapHeight" />
+        <empty-illus wx:if="{{finished && !mediaList.length}}" desc="暂无列表" />
+        <view class="no-more-tips" wx:if="{{finished && mediaList.length}}">～没有更多了～</view>
       </view>
     </swiper-item>
   </swiper>
