--- a/pages/tab-bar-pages/mine/index.wxml
+++ b/pages/tab-bar-pages/mine/index.wxml
@@ -1,5 +1,3 @@
-<import src="/templates/empty-illus/index.wxml" />
-
 <view class="nav-bar" style="padding-top: {{statusBarHeight}}px; opacity: {{navBarVisible ? 100 : 0}};">
   <image class="user-avatar" src="{{userInfo.avatar}}" />
   <view class="user-name">{{userInfo.nickname}}</view>
@@ -56,22 +54,22 @@
         <swiper-item>
           <view class="works-list" wx:if="{{strategyList.length}}">
           </view>
-          <template is="empty-illus" wx:else />
+          <empty-illus wx:else desc="暂时还没有作品，快去发布吧～" />
         </swiper-item>
         <swiper-item>
           <view class="works-list" wx:if="{{videoList.length}}">
           </view>
-          <template is="empty-illus" wx:else />
+          <empty-illus wx:else desc="暂时还没有作品，快去发布吧～" />
         </swiper-item>
         <swiper-item>
           <view class="works-list" wx:if="{{liveList.length}}">
           </view>
-          <template is="empty-illus" wx:else />
+          <empty-illus wx:else desc="暂时还没有作品，快去发布吧～" />
         </swiper-item>
         <swiper-item>
           <view class="works-list" wx:if="{{noteList.length}}">
           </view>
-          <template is="empty-illus" wx:else />
+          <empty-illus wx:else desc="暂时还没有作品，快去发布吧～" />
         </swiper-item>
       </swiper>
     </view>
