feat: 首页媒体列表

--- a/components/empty-illus/index.wxml
+++ b/components/empty-illus/index.wxml
@@ -1,5 +1,5 @@
 <view class="empty">
   <image class="illus" src="https://img.ubo.vip/tiddler/empty.png" />
   <view>{{registerBtnVisible ? '您还未登录' : desc}}</view>
-  <button class="register-btn" wx:if="{{registerBtnVisible}}">点击登录</button>
+  <button class="register-btn" wx:if="{{registerBtnVisible}}" bindtap="register">点击登录</button>
 </view>
