--- a/pages/subpages/live/live-play/components/live-notice/index.wxss
+++ b/pages/subpages/live/live-play/components/live-notice/index.wxss
@@ -1,33 +1,75 @@
 .live-notice {
   position: absolute;
-  top: 0;
-  width: 100%;
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+
 }
+
+.cover-wrap {
+  position: relative;
+  margin-top: 80rpx;
+  width: 440rpx;
+  height: 440rpx;
+  border-radius: 18rpx;
+  overflow: hidden;
+}
+.tag {
+  position: absolute;
+  top: 20rpx;
+  left: 20rpx;
+  width: 80rpx;
+  height: 50rpx;
+  color: #fff;
+  font-size: 24rpx;
+  background: #3F5F9A;
+  border-radius: 4rpx;
+}
+
+.title {
+  margin-top: 32rpx;
+  max-width: 680rpx;
+  color: #fff;
+  font-size: 36rpx;
+  font-weight: bold;
+  text-align: center;
+}
+
 .anchor-info {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 32rpx;
 }
-.avatar {
-  width: 200rpx;
-  height: 200rpx;
-  border-radius: 20rpx;
+.avatar-wrap {
+  position: relative;
+  width: 100rpx;
+  height: 100rpx;
+  font-size: 0;
 }
-.title {
-  margin-top: 30rpx;
-  color: #fff;
-  font-size: 36rpx;
-  font-weight: bold;
+.anchor-avatar {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
 }
-.id {
+.follow-icon {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 36rpx;
+  height: 36rpx;
+}
+.anchor-name {
   margin-top: 12rpx;
-  color: #ccc;
+  max-width: 300rpx;
+  color: #fff;
   font-size: 28rpx;
 }
 
 .time-wrap {
-  margin: 48rpx auto 0;
+  margin-top: 48rpx;
   padding: 30rpx;
   width: 538rpx;
   color: #fff;
@@ -40,22 +82,18 @@
 
 .btn-wrap {
   position: absolute;
-  left: 50%;
-  bottom: calc(50px + env(safe-area-inset-bottom));
-  transform: translateX(-50%);
+  left: 0;
+  bottom: 0;
+  padding: 0 24rpx calc(24rpx + env(safe-area-inset-bottom));
+  width: 100%;
 }
-.btn {
-  margin-top: 30rpx;
-  width: 582rpx;
-  height: 88rpx;
+
+.subscribe-btn, .share-btn {
+  width: 340rpx;
+  height: 80rpx;
   color: #fff;
-  font-size: 36rpx;
-  text-align: center;
-  line-height: 88rpx;
-  border-radius: 44rpx;
+  font-size: 28rpx;
+  border-radius: 40rpx;
   border: 1rpx solid #fff;
 }
-.btn.invalid {
-  color: #ccc;
-  border: 1rpx solid #999;
-}
+
