--- a/components/empty-illus/index.wxml
+++ b/components/empty-illus/index.wxml
@@ -1,4 +1,4 @@
-<view class="empty">
+<view class="empty" style="height: {{height}};">
   <image class="illus" src="https://img.ubo.vip/tiddler/empty.png" />
   <view>{{registerBtnVisible ? '您还未登录' : desc}}</view>
   <button class="register-btn" wx:if="{{registerBtnVisible}}" bindtap="register">点击登录</button>
